<resources>
    <string name="app_name">FinPlanner</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="apply_to_next_years">Aplicar para os próximos anos</string>
    <string name="edit_personal_data">Editar dados iniciais</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="age">Idade</string>
    <string name="monthly_saving">Aportes mensais (R$)</string>
    <string name="unique_saving">Aporte anual único (R$)</string>
    <string name="save">Salvar</string>
    <string name="informations_title">Preencha suas informações</string>
    <string name="currency">R$ </string>

    <string name="selected_detail_age">Idade: %1s anos</string>
    <string name="selected_detail_patrimony">Patrimônio total projetado: R$ %1s</string>
    <string name="selected_detail_savings">Total de aportes realizados até %1s: R$ %2s</string>
    <string name="selected_detail_yearly_passive_income">Renda passiva ano %1s: R$ %2s</string>
    <string name="selected_detail_month_passive_income">Renda passiva média mensal: R$ %1s</string>
    <string name="selected_detail_total_passive_income">Renda passiva acumulada: R$ %1s</string>
    <string name="selected_detail_monthly_passive_income">Renda passiva média: R$ %1s</string>
    <string name="selected_detail_patrimony_percentage_savings">Aportes / patrimônio: %1s</string>
    <string name="selected_detail_patrimony_percentage_passive_income">Renda passiva / patrimônio: %1s</string>

    <string name="input_screen_age">Qual é a sua idade?</string>
    <string name="input_screen_salary">"Qual é o seu salário atual aproximado?"</string>
    <string name="input_screen_monthly_savings">Quanto consegue investir mensalmente em média?</string>
    <string name="input_screen_initial_patrimony">Qual é o seu patrimônio atual aproximado?</string>
    <string name="input_screen_unique_savings">Caso faça aportes anualmente não recorrentes (Bônus, PLR), qual é o valor médio?</string>
    <string name="input_screen_unique_savings_month">Caso faça aportes anualmente não recorrentes (Bônus, PLR), em qual mês se concentra o maior valor?</string>

    <string-array name="months">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
</resources>